check with document.write

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <script src="./script.js"></script>
-</body>
+    <script type="text/javascript" src="./script.js"></script>
+  </head>
+  <body>
+    <h2>Кофемашина</h2>
+    <input type="button" id="latte" value="латте" />
+    <input type="button" id="espresso" value="эспрессо" />
+    <input type="button" id="americano" value="американо" />
+    <input type="button" id="stopCoffee" value="остановить" />
+    <div id="info"></div>
+  </body>
 </html>
