--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <input type="button" id="espresso" value="эспрессо" />
     <input type="button" id="americano" value="американо" />
     <input type="button" id="stopCoffee" value="остановить" />
+    <br />
+    <h2>Мультиварка</h2>
+    <input type="button" id="soup" value="суп" />
+    <input type="button" id="stewing" value="тушение" />
+    <input type="button" id="baking" value="выпечка" />
+    <input type="button" id="stopMultivariate" value="остановить" />
     <div id="info"></div>
   </body>
 </html>
